service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurantapp-frontend-service
spec:
  selector:
    app: restaurantapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: restaurantapp-backend-service
spec:
  selector:
    app: restaurantapp-backend
  ports:
    - protocol: TCP
      port: 1919
      targetPort: 1919
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: restaurantapp-redis-service
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  selector:
    app: restaurantapp-redis
