ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurantapp-ingress-2
  annotations:
    # Use a static IP (optional but recommended)
    kubernetes.io/ingress.global-static-ip-name: "restaurantapp-ip" # Replace with your static IP name
    # Link your Google-managed certificate
    networking.gke.io/managed-certificates: "restaurantapp-cert"
    # Use HTTP to validate domain ownership (GCP specific).
    kubernetes.io/ingress.class: "gce"
    # Automatic HTTP to HTTPS redirect
    # networking.gke.io/v1.FrontendConfig: "default-redirect-config" # Once certificate is ready, uncomment and redeploy this
spec:
  rules:
    - host: team2.cs144.org    # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurantapp-frontend-service # Your ClusterIP Service name
                port:
                  number: 80 # The port your Service listens on
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: restaurantapp-backend-service
                port:
                  number: 1919
